--- a/index.html
+++ b/index.html
@@ -256,7 +256,8 @@ zm17443 永野川　彩
 <input type="button" value="花子" onclick="hanako();">
 <p id="who">world</p>
 
+<h1>前期末プロジェクト</h1>
+    <a href="index1.html"target="_blank">別画面を開いてリンクします</a><br>
 
-    
 </body>
 </html>
